src/style/style.css
@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&family=Poppins:wght@400;700;900&display=swap");

:root {
    --black-lighter: #3f5870;
    --black: #34495e;
    --black-darker: #2c3e50;
    --white: #f2f4f5;
    --white-grey: #dce1e3;
    --grey: #95a5a6;
    --grey-dark: #95a5a6;
    --green: #2ecc71;
    --accent: #2ecc71;
    --accent-darker: #27ae60;
    --red: #e74c3c;
    --orange: #f39c12;
}

*,
::after,
::before {
    margin: 0;
    box-sizing: border-box;
    font-family: "Nunito", "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
    color: var(--black);
}

body {
    min-height: 100vh;
    background-color: var(--white);
    position: relative;
}

.main-wrapper {
    min-height: 100vh;
    display: grid;
    grid-template: 1fr / 300px 1fr;
    grid-template-areas: "sidebar project-content";
}

h1,
h2,
h3,
h4 {
    font-family: "Poppins", sans-serif;
    color: var(--black-darker);
}

span {
    color: inherit;
}

hr {
    color: var(--accent);
}

.display-none {
    display: none;
}

.hidden {
    opacity: 0;
}

.sidebar {
    grid-area: sidebar;
    background-color: var(--black-darker);
    color: var(--white);
    border-radius: 0 1rem 1rem 0;
    padding: 1rem;
}

.sidebar * {
    color: inherit;
}

.sidebar hr {
    margin: 1.5rem auto;
    background-color: var(--black-lighter);
    border: none;
    height: 2px;
}

.logo-container {
    display: flex;
    align-items: center;
    justify-content: center;
    padding-right: 15px;
    gap: 0.5rem;
    text-decoration: none;
}

.logo-text {
    font-weight: 900;
    font-size: 2.5rem;
    font-family: "Poppins", sans-serif;
}

.logo-image {
    font-size: 2.5rem;
    color: var(--accent);
    user-select: none;
}

.sidebar ul {
    list-style: none;
    padding: 0;
}

.sidebar .project-container ul {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

.project-selector {
    font-size: 1.25rem;
    padding: 0.5rem 0.5rem 0.5rem 1rem;
    border: 1px solid var(--black);
    border-radius: 0.5rem;
    user-select: none;
    font-weight: 700;
    font-family: "Poppins";
    background-color: var(--black-darker);

    display: flex;
    justify-content: space-between;
    align-items: center;

    transition-property: background-color border-color color border;
    transition-duration: 0.2s;
    transition-timing-function: ease-in-out;
}

.selector-actions {
    display: flex;
    gap: 0.5rem;

    opacity: 0;
    pointer-events: none;
}

.selector-button {
    background-color: var(--black);
    border: none;
    outline: 1px solid var(--black-lighter);
    border-radius: 4px;
    aspect-ratio: 1 / 1;

    display: flex;
    justify-content: center;
    align-items: center;
    transition: outline 0.2s ease-in-out, background-color .2s ease-in-out;
}

.selector-button span {
    font-size: 1.25rem;
    pointer-events: none;
}

.selector-button:hover {
    cursor: pointer;
    outline-color: var(--accent);
}

.project-selector.selected .selector-actions {
    opacity: 1;
    pointer-events: all;
}

.project-selector:hover {
    background-color: var(--black);
    border-color: var(--black-lighter);
    cursor: pointer;
}

.project-selector:hover .selector-actions {
    opacity: 1;
    pointer-events: all;
}

.selector-button:active {
    background-color: var(--black-lighter);
}

.project-selector.selected {
    color: var(--white);
    background-color: var(--black);
    border: 1px solid var(--accent);
}

#new-project {
    display: flex;
    align-items: center;
    background-color: var(--accent);
    color: var(--black-darker);
    border: none;
    padding: 0.25rem 0.75rem;
    border-radius: 0.5rem;
    margin: 1rem auto 0;
    font-family: "Poppins", sans-serif;
    font-weight: 700;
}

#new-project:hover {
    cursor: pointer;
    outline: 1px solid var(--white);
}

#new-project:active {
    background-color: var(--accent-darker);
}

.project-container h3 {
    margin: 0 1rem 0.5rem;
    font-size: 1.5rem;
}

.project-main {
    width: min(100ch, 100%);
    padding: 2rem;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.project-header {
    color: var(--black);
}

.project-header h2 {
    font-size: 2.5rem;
}

#greeting-subheader {
    font-size: 1.5rem;
    overflow: auto;
}

.project-header span {
    font-family: inherit;
    font-size: inherit;
}

#greeting-name,
.project-name {
    color: var(--accent);
}

#greeting-name {
    word-wrap: break-word;
}

#tasks-container {
    border: 2px solid var(--black);
    border-radius: 1rem;
    margin-top: 4rem;
    width: 100%;
    padding: 1rem;

    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.button-transition {
    transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
}

.project-actions {
    display: flex;
    justify-content: space-between;
}

.project-button {
    padding: 0.25rem 0.5rem;
    border: 1px solid var(--grey);
    border-radius: 0.5rem;
    font-size: 1rem;
    background-color: var(--white);
    font-family: "Nunito", sans-serif;
    font-weight: 700;

    display: flex;
    align-items: center;
}

.project-button span {
    color: var(--accent);
}

.project-button:hover,
.combo-box:hover {
    border-color: var(--accent);
    cursor: pointer;
}

.project-button:active,
.combo-box:active {
    background-color: var(--white-grey);
}

.sort-container {
    font-weight: 700;
    display: flex;
    gap: 0.5rem;
    align-items: center;
}

.combo-box {
    padding: 0.5rem;
    border: 1px solid var(--grey);
    border-radius: 0.5rem;
    background-color: var(--white);
    font-size: 1rem;
    font-weight: 700;
    transition: border-color 0.2s ease-in-out;
    height: 100%;
}

.placeholder-wrapper {
    padding: 1rem;
    font-size: 1.5rem;
    font-weight: 700;
    display: none;
}

.placeholder-wrapper img {
    width: 70%;
}

#project-tasks:empty ~ .placeholder-wrapper {
    display: grid;
    place-items: center;
    gap: 1rem;
}

#project-tasks {
    display: grid;
    grid-template-columns: 1fr;
    gap: 0.5rem;
    grid-auto-rows: 1fr;
}

#project-tasks:empty {
    display: none;
}

.project-task {
    width: 100%;
    padding: 0.5rem 1rem;
    position: relative;

    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 1rem;

    border: 1px solid var(--grey);
    border-radius: 0.5rem;
}

.task-content {
    flex: 1 1 0;
}

.task-header {
    display: inline;
    font-size: 1.25rem;
    transition: color 0.33s cubic-bezier(0.25, 0.46, 0.45, 0.94);
    position: relative;
}

.task-header::before {
    content: "";
    display: block;
    height: 2px;
    width: 0;
    position: absolute;
    top: 50%;
    left: -4px;
    background-color: var(--black-darker);
    transition: width 0.33s cubic-bezier(0.25, 0.46, 0.45, 0.94), background-color 0.33s cubic-bezier(0.25, 0.46, 0.45, 0.94);
}

input[type="checkbox"]:checked + .task-content > .task-header {
    color: var(--grey-dark);
}

input[type="checkbox"]:checked + .task-content > .task-header::before {
    width: calc(100% + 8px);
    background-color: var(--grey-dark);
}

.task-info {
    display: flex;
    gap: 0.5rem;
    align-items: center;
}

.horizontal-separator {
    height: 4px;
    width: 4px;
    background-color: var(--black-lighter);
    border-radius: 999px;
}

.task-priority {
    --priority-color: var(--grey);
    padding: 2px 6px;
    background-color: var(--priority-color);
    color: var(--white);
    border-radius: 4px;
    font-weight: 700;
    text-transform: capitalize;
}

.task-priority.high-priority {
    --priority-color: var(--red);
}

.medium-priority {
    --priority-color: var(--orange);
}

.low-priority {
    --priority-color: var(--green);
}

.task-actions {
    display: flex;
    gap: 0.5rem;
}

.task-button {
    height: 2.5rem;
    width: 2.5rem;
    border-radius: 0.5rem;
    border: 1px solid var(--black);
    background-color: var(--white);
    display: grid;
    place-content: center;
}

.task-button span {
    color: var(--black);
    transform-origin: center;
    transition: transform 0.2s cubic-bezier(0.17, 0.84, 0.44, 1);
    pointer-events: none;
}

.task-button:hover span {
    transform: scale(1.1);
}

.task-button:hover {
    border-color: var(--accent);
    cursor: pointer;
}

.task-button:active {
    background-color: var(--white-grey);
}

input[type="checkbox"] {
    accent-color: var(--accent);
    color: var(--white);
}

